# OnlySharks

./: .gitignore  Cargo.toml  README.md
migrations/2020-12-05-042959_create_posts/: up.sql
migrations/2020-12-05-204948_create_user/: up.sql
src/: main.rs  schema.rs
src/endpoints/: mod.rs  posts.rs  search.rs  timeline.rs  users.rs
src/models/: mod.rs  post.rs  profile.rs  search.rs  timeline.rs
src/services/: jwt.rs
