[package]
name = "onlysharks"
version = "0.1.0"
authors = ["Evie Viau <evie.viau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["diesel_postgres_pool"]}
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "uuid", "chrono"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.4.2"
sodiumoxide = "0.2.6"
jsonwebtoken = "7.2.0"